--- a/bachillerato/recursos/d1-1-5qm1/css/klok.css
+++ b/bachillerato/recursos/d1-1-5qm1/css/klok.css
@@ -106,6 +106,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
+    display: none;
 }
 .movimiento a {
     cursor: pointer;
@@ -194,11 +195,16 @@ span#btnIondipolo {
 .cerrar {
     position: absolute;
     cursor: pointer;
-    background: url(../img/botones/cerrar.png) 0 0 no-repeat;
+    background: url("../img/botones/cerrar.png") no-repeat scroll 0px 0px transparent;
     width: 32px;
     height: 32px;
-    top: 50px;
-    left: 690px;
+    top: 206px;
+    right: 166px;
+}
+
+.cerrar2 {
+    top: 42px !important;
+    right: 112px !important;
 }
 
 .ventana .texto {
@@ -230,17 +236,23 @@ span#btnIondipolo {
     width: 647px;
     height: 93px;
     color: white;
-    padding: 10px 10px 10px 128px;
     font-size: 14px
 }
+
+.pregunta .texto article{
+    margin-left: 112px;
+    padding: 0px 10px;
+    text-align: center;
+    height: 84px;
+    margin-top: 4px; }
 
 span.num {
     position: absolute;
     font-size: 50px;
-    line-height: 73px;
-    left: 9px;
-    top: 6px;
-    width: 90px;
+    line-height: 84px;
+    left: 4px;
+    top: 3px;
+    width: 105px;
     text-align: center;
     font-weight: 600;
 }
@@ -253,21 +265,71 @@ span.num {
     z-index: 2;
 }
 
+.table {
+    width: 100%;
+    height: 100%;
+    display: table;
+    table-layout: fixed; }
+.table-cell{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center; }
+
 .opciones .opcion {
     display: block;
     background: url(../img/botones/celda-grande-normal.png) 0 0 no-repeat;
     width: 302px;
     height: 110px;
     text-align: center;
+    position: relative;
+    margin-bottom: 30px;
     color: white;
     cursor: pointer;
+    padding: 0 10px;
     box-sizing: border-box;
-    padding: 16px 6px;
-    margin-bottom: 36px;
 }
+
+#zoom-lupa {
+    position: absolute;
+    width: 100%;
+    display: none;
+    z-index: 100;
+    height: 100%; }
+
+#detalle-01,#detalle-02,#detalle-03,#detalle-04 {
+    display: none; }
+
+#lupa-01, #lupa-02, #lupa-03, #lupa-04 {
+    position: absolute;
+    left: 0px;
+    cursor: pointer;
+    width: 29px;
+    background: url(../img/boton-detalle-inactivo.png) no-repeat center;
+    height: 38px;
+    z-index: 99900;
+    bottom: 0px; }
+
+#lupa-01:hover, #lupa-02:hover, #lupa-03:hover, #lupa-04:hover {
+    background: url(../img/boton-detalle-activo.png) no-repeat center; }
+
+#table-zoom {
+    position: relative;
+    background: rgba(0,0,0,0.6); }
+
+#close-zoomLupa {
+    right: 0;
+    top: 0;
+    cursor: pointer;
+    z-index: 1;
+    position: absolute; }
+
+#contenedor-zoom {
+    display: inline-block;
+    position: relative; }
+
 .opciones .opcion.chica {
     width: 200px;
-    height: 79px;
+    height: 77px;
     background: url(../img/botones/celda-normal.png) 0 0 no-repeat;
 }
 .pregunta-grande .opciones .opcion {
@@ -323,24 +385,35 @@ span.num {
     left: 150px;
 }
 
-
-img#grafico1 {
+#cerrar-buton-tabla {
     position: absolute;
-    left: 230px;
-    top: 200px;
-    width: 40%;
+    right: 162px;
+    top: 80px;
+    z-index: 100; }
+
+#grafico1 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 134px;
     z-index: 40;
+    background: url("../img/grafica.png") no-repeat scroll center center transparent;
+    height: 46px;
+    margin: -52px 0px 0px -67px;
     cursor: pointer;
 }
 
+#grafico1:hover, #grafico1:active {
+    background: url(../img/graficaazul.png) no-repeat center; }
+
 #tablagrafico1{
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.5) url(../img/grafica2.png) center center no-repeat;
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	display:none;
-	z-index: 50;
-		
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5) url(../img/grafica2.png) center center no-repeat;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    display:none;
+    z-index: 50;
+
 }
